--- a/src/main/resources/static/article.html
+++ b/src/main/resources/static/article.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/github.min.css" />
 
 
-<!--    <script src="js/1.js">    </script>-->
-<!--    <script src="js/1.js"></script>-->
+    <!--    <script src="js/1.js">    </script>-->
+    <!--    <script src="js/1.js"></script>-->
     <script src="js/highlight.min.js"></script>
 
     <script src="js/markdown-it.min.js"></script>
@@ -41,12 +41,13 @@
 
 
         body {
-            background: linear-gradient(180deg, #e4f1ff 0%, #f5faff 100%);
+            background: linear-gradient(135deg, #e4f1ff 0%, #f5faff 50%, #e8f4ff 100%);
             background-attachment: fixed;
             font-family: 'Press Start 2P', cursive, sans-serif;
             color: #212529;
             margin: 0;
             padding: 0;
+            transition: background 0.3s ease;
         }
 
         html, body {
@@ -64,7 +65,13 @@
             overflow: hidden;
             background: #fff;
             border: 3px solid #212529;
-            border-radius: 8px;
+            border-radius: 12px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .page-wrapper:hover {
+            box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
         }
 
 
@@ -73,6 +80,25 @@
             height: 100%;
             padding: 1rem;
             box-sizing: border-box;
+            scrollbar-width: thin;
+            scrollbar-color: #209cee #f5faff;
+        }
+
+        .content-wrapper::-webkit-scrollbar {
+            width: 8px;
+        }
+        .content-wrapper::-webkit-scrollbar-track {
+            background: #f5faff;
+            border-radius: 4px;
+        }
+        .content-wrapper::-webkit-scrollbar-thumb {
+            background: #209cee;
+            border-radius: 4px;
+            border: 2px solid #f5faff;
+            transition: background 0.3s ease;
+        }
+        .content-wrapper::-webkit-scrollbar-thumb:hover {
+            background: #1a8bd6;
         }
 
 
@@ -81,35 +107,60 @@
             background: #fff;
             border: 4px solid #212529;
             box-shadow: 4px 4px 0 #212529;
-            border-radius: 8px;
+            border-radius: 12px 12px 8px 8px;
             padding: 1rem 0.5rem !important;
             margin-bottom: 0.5rem !important;
+            transition: all 0.3s ease;
+        }
+
+        header.nes-container:hover {
+            box-shadow: 4px 4px 0 #212529, 0 4px 16px rgba(0, 0, 0, 0.1);
         }
 
         header.nes-container h1{
             font-size: 0.9rem;
             margin: 0.1rem 0 !important;
             line-height: 1.2;
+            transition: color 0.3s ease;
+        }
+
+        header.nes-container:hover h1 {
+            color: #209cee;
         }
 
         header.nes-container p {
             margin: 0.1rem 0 !important;
             font-size: 0.8rem;
+            transition: color 0.3s ease;
+        }
+
+        header.nes-container:hover p {
+            color: #666;
         }
 
         .article-container {
             background: #fff;
             border: 4px solid #212529;
-            box-shadow: 4px 4px 0 #212529;
-            border-radius: 12px;
+            box-shadow: 4px 4px 0 #212529, 0 4px 16px rgba(0, 0, 0, 0.08);
+            border-radius: 16px;
             padding: 1.5rem;
             margin-bottom: 1.5rem;
+            transition: all 0.3s ease;
+        }
+
+        .article-container:hover {
+            box-shadow: 4px 4px 0 #212529, 0 8px 24px rgba(0, 0, 0, 0.12);
         }
 
         .article-title {
             font-size: 1rem;
             text-align: center;
             margin-bottom: 0.6rem;
+            transition: color 0.3s ease;
+        }
+
+        .article-container:hover .article-title {
+            color: #209cee;
         }
 
         .article-meta {
@@ -117,6 +168,11 @@
             color: #666;
             text-align: center;
             margin-bottom: 1rem;
+            transition: color 0.3s ease;
+        }
+
+        .article-container:hover .article-meta {
+            color: #555;
         }
 
 
@@ -124,12 +180,23 @@
             font-size: 0.7rem;
             line-height: 1.8;
             color: #333;
+            transition: color 0.3s ease;
+        }
+
+        .article-container:hover .article-content {
+            color: #444;
         }
 
         .article-content h1 {
             font-size: 1rem;
             border-bottom: 3px solid #212529;
             padding-bottom: 0.5rem;
+            transition: all 0.3s ease;
+        }
+
+        .article-content h1:hover {
+            border-bottom-color: #209cee;
+            color: #209cee;
         }
 
         .article-content h2,
@@ -138,6 +205,13 @@
             padding-left: 8px;
             margin-top: 1.2rem;
             font-size: 0.8rem;
+            transition: all 0.3s ease;
+        }
+
+        .article-content h2:hover,
+        .article-content h3:hover {
+            border-left-color: #1a8bd6;
+            color: #209cee;
         }
 
 
@@ -148,8 +222,14 @@
             border-radius: 8px;
             overflow-x: auto;
             font-size: 0.65rem;
-            box-shadow: 3px 3px 0 #212529;
+            box-shadow: 3px 3px 0 #212529, 0 2px 8px rgba(0, 0, 0, 0.1);
             border: 2px solid #e1e1e1;
+            transition: all 0.3s ease;
+        }
+
+        .article-content pre:hover {
+            box-shadow: 3px 3px 0 #212529, 0 4px 12px rgba(0, 0, 0, 0.15);
+            border-color: #d0d0d0;
         }
 
         .article-content code {
@@ -157,6 +237,12 @@
             padding: 2px 4px;
             border-radius: 4px;
             color: #d14;
+            transition: all 0.3s ease;
+        }
+
+        .article-content code:hover {
+            background: #f0f0f0;
+            color: #b11;
         }
 
         .article-content pre code {
@@ -173,6 +259,12 @@
             background: #f9f9f9;
             padding: 0.5rem 1rem;
             border-radius: 4px;
+            transition: all 0.3s ease;
+        }
+
+        .article-content blockquote:hover {
+            background: #f5f5f5;
+            border-left-color: #1a8bd6;
         }
 
         .article-content img {
@@ -180,6 +272,12 @@
             border: 2px solid #212529;
             border-radius: 8px;
             margin: 1rem 0;
+            transition: all 0.3s ease;
+        }
+
+        .article-content img:hover {
+            border-color: #209cee;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         }
 
         .article-content ul, .article-content ol {
@@ -190,6 +288,11 @@
             border-collapse: collapse;
             width: 100%;
             margin: 1rem 0;
+            transition: all 0.3s ease;
+        }
+
+        .article-content table:hover {
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
         .article-content th,
@@ -197,6 +300,15 @@
             border: 1px solid #999;
             padding: 6px;
             text-align: left;
+            transition: all 0.3s ease;
+        }
+
+        .article-content th {
+            background: #f9f9f9;
+        }
+
+        .article-content tr:hover td {
+            background: #f5f5f5;
         }
 
 
@@ -204,6 +316,29 @@
             display: block;
             margin: 2rem auto 0;
             padding: 0.5rem 1rem;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .back-btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+            transition: left 0.5s;
+        }
+
+        .back-btn:hover::before {
+            left: 100%;
+        }
+
+        .back-btn:hover {
+            transform: translateY(-2px) scale(1.05);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         }
 
 
@@ -213,6 +348,11 @@
             background: #fff;
             font-size: 0.6rem;
             color: #666;
+            transition: all 0.3s ease;
+        }
+
+        footer:hover {
+            color: #209cee;
         }
 
 
@@ -222,6 +362,7 @@
                 width: 100%;
                 min-height: 100vh;
                 top: 0;
+                border-radius: 0;
             }
         }
 
@@ -237,6 +378,27 @@
             padding: 2rem;
             color: #d9534f;
             font-size: 0.8rem;
+        }
+
+        .nes-balloon {
+            transition: all 0.3s ease;
+        }
+
+        .nes-balloon:hover {
+            transform: translateY(-2px);
+        }
+
+        .nes-btn {
+            transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .nes-btn:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .nes-btn.is-error:hover {
+            transform: translateY(-1px) scale(1.02);
         }
     </style>
 </head>
