修复文章页跳转问题

--- a/src/main/resources/static/article.html
+++ b/src/main/resources/static/article.html
@@ -435,7 +435,7 @@
 
             <button
                     class="nes-btn is-primary back-btn"
-                    onclick="window.location.href='index.html'"
+                    onclick="window.location.href='catalogue.html'"
             >
                 ⬅ 返回首页
             </button>
@@ -554,5 +554,6 @@
         })
         .catch(console.error)
 </script>
+<script src="js/loader.js"></script>
 </body>
 </html>
