--- a/src/main/resources/static/article.html
+++ b/src/main/resources/static/article.html
@@ -1,412 +1,36 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns="http://www.w3.org/1999/html">
+<html lang="zh">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>文章详情 - 奶糖</title>
 
+    <!-- 保留 nes.css 核心样式（非Markdown相关） -->
     <link rel="stylesheet" href="css/nes.css"/>
+    
+    <!-- 添加article.css外部样式文件 -->
+    <link rel="stylesheet" href="css/article.css"/>
 
-    <link rel="stylesheet" href="css/github.min.css" />
+    <!-- 1. 导入 GitHub Markdown CSS（CDN，替代自定义Markdown样式） -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@5.5.1/github-markdown.min.css">
 
+    <!-- 2. 导入 highlight.js（CDN，代码高亮，替代本地版本） -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/github.min.css">
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
 
-    <!--    <script src="js/1.js">    </script>-->
-    <!--    <script src="js/1.js"></script>-->
-    <script src="js/highlight.min.js"></script>
-
-    <script src="js/markdown-it.min.js"></script>
-
+    <!-- 保留必要依赖：Vue 和 Axios -->
     <script src="js/vue.global.js"></script>
     <script src="js/axios.min.js"></script>
 
-    <style>
-        @font-face {
-            font-family: milk;
-            src: url("fonts/milk.ttf");
-        }
-        #hitokoto_text,#hitokoto_author{
-            font-family: milk;
-        }
-        @font-face {
-            font-family: SimSun;
-            src: url("fonts/SimHei.ttf");
-        }
-        @font-face {
-            font-family: JetBrains Mono;
-            src: url("fonts/JetBrainsMono-Regular.ttf");
-        }
-        *{
-            font-family: JetBrains Mono , SimSun;
-        }
+    <!-- 添加article.js外部脚本文件 -->
+    <script src="js/article.js"></script>
 
-
-        body {
-            background: linear-gradient(135deg, #e4f1ff 0%, #f5faff 50%, #e8f4ff 100%);
-            background-attachment: fixed;
-            font-family: 'Press Start 2P', cursive, sans-serif;
-            color: #212529;
-            margin: 0;
-            padding: 0;
-            transition: background 0.3s ease;
-        }
-
-        html, body {
-            height: 100%;
-            overflow: hidden;
-        }
-
-
-        .page-wrapper {
-            transform: scale(1.5);
-            transform-origin: top center;
-            width: calc(100% / 1.5);
-            height: calc(100vh / 1.5);
-            margin: 0 auto;
-            overflow: hidden;
-            background: #fff;
-            border: 3px solid #212529;
-            border-radius: 12px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-
-        .page-wrapper:hover {
-            box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
-        }
-
-
-        .content-wrapper {
-            overflow-y: auto;
-            height: 100%;
-            padding: 1rem;
-            box-sizing: border-box;
-            scrollbar-width: thin;
-            scrollbar-color: #209cee #f5faff;
-        }
-
-        .content-wrapper::-webkit-scrollbar {
-            width: 8px;
-        }
-        .content-wrapper::-webkit-scrollbar-track {
-            background: #f5faff;
-            border-radius: 4px;
-        }
-        .content-wrapper::-webkit-scrollbar-thumb {
-            background: #209cee;
-            border-radius: 4px;
-            border: 2px solid #f5faff;
-            transition: background 0.3s ease;
-        }
-        .content-wrapper::-webkit-scrollbar-thumb:hover {
-            background: #1a8bd6;
-        }
-
-
-        header.nes-container {
-            text-align: center;
-            background: #fff;
-            border: 4px solid #212529;
-            box-shadow: 4px 4px 0 #212529;
-            border-radius: 12px 12px 8px 8px;
-            padding: 1rem 0.5rem !important;
-            margin-bottom: 0.5rem !important;
-            transition: all 0.3s ease;
-        }
-
-        header.nes-container:hover {
-            box-shadow: 4px 4px 0 #212529, 0 4px 16px rgba(0, 0, 0, 0.1);
-        }
-
-        header.nes-container h1{
-            font-size: 0.9rem;
-            margin: 0.1rem 0 !important;
-            line-height: 1.2;
-            transition: color 0.3s ease;
-        }
-
-        header.nes-container:hover h1 {
-            color: #209cee;
-        }
-
-        header.nes-container p {
-            margin: 0.1rem 0 !important;
-            font-size: 0.8rem;
-            transition: color 0.3s ease;
-        }
-
-        header.nes-container:hover p {
-            color: #666;
-        }
-
-        .article-container {
-            background: #fff;
-            border: 4px solid #212529;
-            box-shadow: 4px 4px 0 #212529, 0 4px 16px rgba(0, 0, 0, 0.08);
-            border-radius: 16px;
-            padding: 1.5rem;
-            margin-bottom: 1.5rem;
-            transition: all 0.3s ease;
-        }
-
-        .article-container:hover {
-            box-shadow: 4px 4px 0 #212529, 0 8px 24px rgba(0, 0, 0, 0.12);
-        }
-
-        .article-title {
-            font-size: 1rem;
-            text-align: center;
-            margin-bottom: 0.6rem;
-            transition: color 0.3s ease;
-        }
-
-        .article-container:hover .article-title {
-            color: #209cee;
-        }
-
-        .article-meta {
-            font-size: 0.6rem;
-            color: #666;
-            text-align: center;
-            margin-bottom: 1rem;
-            transition: color 0.3s ease;
-        }
-
-        .article-container:hover .article-meta {
-            color: #555;
-        }
-
-
-        .article-content {
-            font-size: 0.7rem;
-            line-height: 1.8;
-            color: #333;
-            transition: color 0.3s ease;
-        }
-
-        .article-container:hover .article-content {
-            color: #444;
-        }
-
-        .article-content h1 {
-            font-size: 1rem;
-            border-bottom: 3px solid #212529;
-            padding-bottom: 0.5rem;
-            transition: all 0.3s ease;
-        }
-
-        .article-content h1:hover {
-            border-bottom-color: #209cee;
-            color: #209cee;
-        }
-
-        .article-content h2,
-        .article-content h3 {
-            border-left: 4px solid #209cee;
-            padding-left: 8px;
-            margin-top: 1.2rem;
-            font-size: 0.8rem;
-            transition: all 0.3s ease;
-        }
-
-        .article-content h2:hover,
-        .article-content h3:hover {
-            border-left-color: #1a8bd6;
-            color: #209cee;
-        }
-
-
-        .article-content pre {
-            background: #ffffff;
-            color: #333;
-            padding: 1rem;
-            border-radius: 8px;
-            overflow-x: auto;
-            font-size: 0.65rem;
-            box-shadow: 3px 3px 0 #212529, 0 2px 8px rgba(0, 0, 0, 0.1);
-            border: 2px solid #e1e1e1;
-            transition: all 0.3s ease;
-        }
-
-        .article-content pre:hover {
-            box-shadow: 3px 3px 0 #212529, 0 4px 12px rgba(0, 0, 0, 0.15);
-            border-color: #d0d0d0;
-        }
-
-        .article-content code {
-            background: #f8f8f8;
-            padding: 2px 4px;
-            border-radius: 4px;
-            color: #d14;
-            transition: all 0.3s ease;
-        }
-
-        .article-content code:hover {
-            background: #f0f0f0;
-            color: #b11;
-        }
-
-        .article-content pre code {
-            background: none;
-            padding: 0;
-            color: inherit;
-        }
-
-        .article-content blockquote {
-            border-left: 4px solid #209cee;
-            padding-left: 1rem;
-            margin-left: 0;
-            color: #666;
-            background: #f9f9f9;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            transition: all 0.3s ease;
-        }
-
-        .article-content blockquote:hover {
-            background: #f5f5f5;
-            border-left-color: #1a8bd6;
-        }
-
-        .article-content img {
-            max-width: 100%;
-            border: 2px solid #212529;
-            border-radius: 8px;
-            margin: 1rem 0;
-            transition: all 0.3s ease;
-        }
-
-        .article-content img:hover {
-            border-color: #209cee;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        }
-
-        .article-content ul, .article-content ol {
-            padding-left: 1.5rem;
-        }
-
-        .article-content table {
-            border-collapse: collapse;
-            width: 100%;
-            margin: 1rem 0;
-            transition: all 0.3s ease;
-        }
-
-        .article-content table:hover {
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .article-content th,
-        .article-content td {
-            border: 1px solid #999;
-            padding: 6px;
-            text-align: left;
-            transition: all 0.3s ease;
-        }
-
-        .article-content th {
-            background: #f9f9f9;
-        }
-
-        .article-content tr:hover td {
-            background: #f5f5f5;
-        }
-
-
-        .back-btn {
-            display: block;
-            margin: 2rem auto 0;
-            padding: 0.5rem 1rem;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .back-btn::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
-            transition: left 0.5s;
-        }
-
-        .back-btn:hover::before {
-            left: 100%;
-        }
-
-        .back-btn:hover {
-            transform: translateY(-2px) scale(1.05);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        }
-
-
-        footer {
-            text-align: center;
-            padding: 0.5rem 0;
-            background: #fff;
-            font-size: 0.6rem;
-            color: #666;
-            transition: all 0.3s ease;
-        }
-
-        footer:hover {
-            color: #209cee;
-        }
-
-
-        @media (max-width: 800px) {
-            .page-wrapper {
-                transform: none;
-                width: 100%;
-                min-height: 100vh;
-                top: 0;
-                border-radius: 0;
-            }
-        }
-
-
-        .loading {
-            text-align: center;
-            padding: 2rem;
-            font-size: 0.8rem;
-        }
-
-        .error {
-            text-align: center;
-            padding: 2rem;
-            color: #d9534f;
-            font-size: 0.8rem;
-        }
-
-        .nes-balloon {
-            transition: all 0.3s ease;
-        }
-
-        .nes-balloon:hover {
-            transform: translateY(-2px);
-        }
-
-        .nes-btn {
-            transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        .nes-btn:hover {
-            transform: translateY(-1px);
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .nes-btn.is-error:hover {
-            transform: translateY(-1px) scale(1.02);
-        }
-    </style>
 </head>
 <body>
 <div class="page-wrapper">
     <div id="app" class="content-wrapper">
         <header class="nes-container is-centered">
-            <h1 id='hitokoto_text' >加载中...</h1>
+            <h1 id='hitokoto_text'>加载中...</h1>
             <p id="hitokoto_author"></p>
         </header>
 
@@ -431,7 +55,8 @@
                 <button class="nes-btn is-error" @click="retry">重试</button>
             </div>
 
-            <div v-else class="article-content" v-html="renderedContent"></div>
+            <!-- 4. Markdown内容容器：添加 markdown-body 类名，让GitHub样式生效 -->
+            <div v-else class="article-content markdown-body" v-html="article.content || '<p>暂无内容</p>'"></div>
 
             <button
                     class="nes-btn is-primary back-btn"
@@ -445,115 +70,11 @@
     </div>
 </div>
 
-<script>
-    const { createApp, ref, computed, onMounted, nextTick } = Vue;
-
-    const app = createApp({
-        setup() {
-            const article = ref({});
-            const loading = ref(true);
-            const error = ref(null);
-
-
-            const md = window.markdownit({
-                html: true,
-                breaks: true,
-                linkify: true,
-                typographer: true,
-                highlight: function (code, lang) {
-                    if (lang && hljs.getLanguage(lang)) {
-                        try {
-                            return hljs.highlight(code, { language: lang }).value;
-                        } catch (__) {}
-                    }
-                    return hljs.highlightAuto(code).value;
-                }
-            });
-
-
-            const renderedContent = computed(() => {
-                if (!article.value.content) return '<p>暂无内容</p>';
-                return md.render(article.value.content);
-            });
-
-
-            const formatTime = (timeStr) => {
-                if (!timeStr) return '';
-                return timeStr.replace('T', ' ');
-            };
-
-
-            const getArticle = async (id) => {
-                try {
-                    loading.value = true;
-                    error.value = null;
-
-
-                    const response = await axios.get(`/article/${id}`);
-
-                    if (response.data) {
-                        article.value = response.data;
-                    } else {
-                        throw new Error('文章数据为空');
-                    }
-
-                    loading.value = false;
-
-
-                    nextTick(() => {
-                        document.querySelectorAll("pre code").forEach((block) => {
-                            hljs.highlightElement(block);
-                        });
-                    });
-
-                } catch (err) {
-                    console.error("获取文章失败：", err);
-                    loading.value = false;
-                    error.value = `获取文章失败: ${err.message || '未知错误'}`;
-                }
-            };
-
-            const retry = () => {
-                const urlParams = new URLSearchParams(window.location.search);
-                const id = urlParams.get("id") || 1;
-                getArticle(id);
-            };
-
-            onMounted(() => {
-                const urlParams = new URLSearchParams(window.location.search);
-                const id = urlParams.get("id") || 1;
-                getArticle(id);
-            });
-
-            return {
-                article,
-                renderedContent,
-                loading,
-                error,
-                formatTime,
-                retry
-            };
-        },
-    });
-
-    app.mount("#app");
-</script>
-
-<script>
-    const hitokoto = document.querySelector('#hitokoto_text');
-    const hitokoto_author = document.querySelector("#hitokoto_author")
-
-    axios.get('https://hi.logacg.com')
-        .then(({ data }) => {
-            hitokoto.innerText = data.hitokoto
-            hitokoto_author.innerText =
-                data.from && data.from_who ? `${data.from} - ${data.from_who}` :
-                    data.from_who ? data.from_who :
-                        data.from ? data.from : '';
-
-        })
-        .catch(console.error)
-</script>
+<!-- 保留原有辅助脚本（若无需可删除） -->
 <script src="js/loader.js"></script>
-</body>
-</html>
+<iframe
+        src="fixed-action-buttons.html"
+        style="position: fixed; bottom: 0; right: 0; border: none; width: auto; height: auto; z-index: 9999;"
+        frameborder="0"
+        scrolling="no"
+></iframe>
