--- a/src/main/resources/static/catalogue.html
+++ b/src/main/resources/static/catalogue.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/nes.css"/>
     <link rel="stylesheet" href="css/font.css"/>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/catalogue.css">
 
     <script src="js/axios.min.js"></script>
     <script src="js/vue.global.js"></script>
@@ -25,10 +25,10 @@
         <aside class="sidebar nes-container with-title">
             <p class="title">📂 分类</p>
             <div class="category-list">
-                <button class="nes-btn category-btn active" onclick="filterArticles(event, '1')">未来与梦</button>
-                <button class="nes-btn category-btn" onclick="filterArticles(event, '2')">拾枝杂谈</button>
-                <button class="nes-btn category-btn " onclick="filterArticles(event, '3')">生活琐碎</button>
-                <button class="nes-btn category-btn" onclick="filterArticles(event, '4')">救病复发</button>
+                <button class="nes-btn category-btn active" data-category="1">未来与梦</button>
+                <button class="nes-btn category-btn" data-category="2">拾枝杂谈</button>
+                <button class="nes-btn category-btn" data-category="3">生活琐碎</button>
+                <button class="nes-btn category-btn" data-category="4">救病复发</button>
             </div>
         </aside>
         <section class="content" id="app">
@@ -54,7 +54,11 @@
     <footer>奶糖の糖袋子</footer>
 </div>
 <script src="js/index.js"></script>
-
-<script src="js/loader.js"></script>
+<iframe
+        src="fixed-action-buttons.html"
+        style="position: fixed; bottom: 0; right: 0; border: none; width: auto; height: auto; z-index: 9999;"
+        frameborder="0"
+        scrolling="no"
+></iframe>
 </body>
 </html>
