--- a/src/main/resources/static/catalogue.html
+++ b/src/main/resources/static/catalogue.html
@@ -53,7 +53,7 @@
 
     <footer>奶糖の糖袋子</footer>
 </div>
-<script src="js/index.js"></script>
+<script src="js/catalogue.js"></script>
 <iframe
         src="fixed-action-buttons.html"
         style="position: fixed; bottom: 0; right: 0; border: none; width: auto; height: auto; z-index: 9999;"
