--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -208,7 +208,7 @@
         
         <!-- 趣味角落卡片 -->
         <div class="portal-card fun" onclick="navigateTo('fun')">
-            <div class="card-header">🎮 趣味角落</div>
+            <div class="card-header">🎮 奇思妙想</div>
             <div class="card-content">
                 <div class="card-icon">🎯</div>
                 <div class="card-title">小玩意儿</div>
